--- a/assets/css/stylebio.css
+++ b/assets/css/stylebio.css
@@ -87,8 +87,8 @@ h6 {
   } */
 
   .linktree {
-	 width: 100wh;
-	height: 90vh;
+	  width: 300px;
+	  height: 100px;
 	  background-image: url("https://www.infiniteproleague.games/assets/images/banner-lft-logo.png");
 	  background-size: cover;
 	  background-repeat: no-repeat;
