--- a/assets/css/stylebio.css
+++ b/assets/css/stylebio.css
@@ -56,6 +56,13 @@ h6 {
 	left: 0;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
 .shake {
 	animation: shake-animation 4.72s ease infinite;
 	transform-origin: 50% 50%;
@@ -87,8 +94,8 @@ h6 {
   } */
 
   .linktree {
-	  width: 400px;
-	  height: 300px;
+	  width: 300px;
+	  height: 100px;
 	  background-image: url("https://www.infiniteproleague.games/assets/images/banner-lft-logo.png");
 	  background-size: cover;
 	  background-repeat: no-repeat;
