--- a/assets/css/stylebio.css
+++ b/assets/css/stylebio.css
@@ -93,7 +93,7 @@ h6 {
 	  border-radius:190px;
   } */
 
-  .linktree {
+/*   .linktree {
 	  width: 300px;
 	  height: 100px;
 	  background-image: url("https://www.infiniteproleague.games/assets/images/banner-lft-logo.png");
@@ -101,3 +101,4 @@ h6 {
 	  background-repeat: no-repeat;
 	  background-position: 50% 50%;
   }
+ */
