--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -199,10 +199,10 @@ body {
 
 .main-blue-button a {
   display: inline-block;
-  background-color: #03a4ed;
+  background-color: #ececec;
   font-size: 15px;
   font-weight: 400;
-  color: #1e1e1e;
+  color: #fe3f40;
   text-transform: capitalize;
   padding: 12px 25px;
   border-radius: 23px;
